style.css
body{
    background-color: rgb(56, 64, 71);
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    overflow-wrap: anywhere;
    background-position: center;
    background-attachment: fixed;
    margin: 0px;
}
.center{
    justify-content: center;
    align-items: center;
}

dialog .wrapper{
    padding: 16px;
    justify-content: center;
    align-items: center;
    text-align: center;
}
dialog .howToPlayWrapper{
    padding: 16px;
    justify-content: center;
    align-items: center;
    text-align: center;
}

button {
    cursor: pointer;
}

.categoryBox{
    position: relative;
    font-size: 1.1rem;
    color: white;
    font-weight: bold;
    margin-right: 15px;
    margin-bottom: 25px;
    border: 3px solid rgb(255, 255, 255);
    text-align: center;
    width: 160px;
    height: 200px;
    opacity: 0;
}
.categoryLabelBox{
    font-size: 1.2rem;
    color: white;
    font-weight: bold;
    border: 3px solid rgba(255, 255, 255, 100);
    display: grid;
    width: 160px;
    height: 100px;
    justify-content: center;;
    text-align: center;
    align-items: center;
    box-sizing: border-box;
}
.categoryResultBox{
    font-size: 1.1rem;
    color: rgb(255, 255, 255);
    font-weight: bold;
    border: 3px solid rgba(255, 255, 255, 100);
    display: grid;
    width: 160px;
    height: 100px;
    justify-content: center;
    text-align: center;
    align-items: center;
    box-sizing: border-box;
}

.infoParagraphs{
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.5rem;
    margin-right: 10px;
    color: white;
    font-weight: bold;
}
.grid-container{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(180px, 180px));
    justify-content: center;
}

.hrclass{
    border: 5px solid rgb(47, 3, 77);
    min-width: 99%;
    margin-bottom: 50px;
    margin-top: 25px;
}
.gameResultsLogo{
    width: 16rem;
    margin-top: 5px;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

.navbar ul{
    list-style-type: none;
    background-color: rgba(0, 0, 0, 0);
    padding: 0px;
    margin: 0px;
    margin-top: 5px;
    margin-left: 42.9%;
    margin-bottom: 15px;
    overflow: hidden;
}
.navbar button{
    font-weight: bold;
    font-size: 1.4rem;
    color: rgb(255, 255, 255);
    background-color: rgb(185, 0, 158);
    border: 3px solid black;
    border-radius: 20px;
    margin-right: 5px;
    padding: 8px;
    padding-right: 15px;
    padding-left: 15px;
    text-align: center;
    text-decoration: none;
}
.navbar button:hover{
    background-color: rgb(158, 0, 134);
}
.navbar button:active{
    background-color: rgb(122, 0, 104);
}


.animatedBoxes{
    animation: showBoxes 150ms ease;
}
@keyframes showBoxes{
  0% {
    opacity: 0;
    width: 0;
    height: 0;
  }
  100% {
    opacity: 1;
    width: 160px;
    height: 200px;
  }
}


#runnerInput{
    display: flex;
    margin-top: 40px;
}
#runnerInputBox{
    font-size: 1.5rem;
    width: min(290px, 50%);
    border-radius: 10px;
    border: 3px solid black;
}
#runnerInputBox:disabled{
    cursor: not-allowed;
}

#runnerSubmit{
    font-size: 1.5rem;
    border-radius: 10px;
    border: 3px solid black;
    margin-left: 10px;
    color: black;
    overflow-wrap: normal;
    background-color: rgb(255, 255, 255);
}
#runnerSubmit:hover{
    background-color: rgb(204, 204, 204);
}
#runnerSubmit:active{
    background-color: rgb(184, 184, 184);
}
#runnerSubmit:disabled{
    background-color: grey;
    cursor: not-allowed;
}

#resultText{
    font-size: 1.3rem;
}
#runnerNameText{
    font-size: 1.4rem;
    font-weight: bold;
}
#runnerInfoText{
    font-size: 1.2rem;
    white-space: pre-line;
}



#howToPlayDialogue{
    padding: 0;
    background-color: rgb(47, 3, 77);
    color: white;
}
#howToPlayDialogue[open]{
    animation: slide-up 300ms forwards;
}
#howToPlayDialogue[open]::backdrop{
    animation: fade-in 300ms forwards;
}
#howToPlayDialogue h1{
    margin-top: 5px;
    font-size: 2.5rem;
}
#howToPlayDialogue h2{
    color: rgb(255, 255, 0);
}
#howToPlayDialogue h3{
    color: rgb(218, 218, 0);
}
#howToPlayDialogue p{
    font-size: 1.1rem;
}


#gameOverDialogue{
    padding: 0;
    background-color: rgb(47, 3, 77);
    color: white;
}
#gameOverDialogue[open]{
    animation: slide-up 500ms forwards;
}
#gameOverDialogue[open]::backdrop{
    animation: fade-in 500ms forwards;
}
@keyframes fade-in{
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}
@keyframes slide-up{
    0% {
        transform: translateY(100%);
    }
    100% {
        transform: translateY(0%);
    }
}

#showResults{
    text-align: center;
}
#showResultsBtn{
    display: none;
    margin-top: 50px;
    padding: 8px;
    font-size: 2rem;
    border-style: none;
    border-radius: 25px;
    background-color: rgb(69, 163, 69);
    color: rgb(255, 255, 255);
    overflow-wrap: normal;
    width: fit-content;
    cursor: pointer;
}
#showResultsBtn:hover{
    background-color: rgb(55, 129, 55);
}
#showResultsBtn:active{
    background-color: rgb(55, 109, 55);
}

#exitDialogue{
    font-weight: bold;
    font-size: 2.5rem;
    position: absolute;
    right: 5px;
    color: white;
    background-color: rgba(255, 255, 255, 0);
    border-style: none;
}
#exitDialogue:hover{
    color: rgb(204, 204, 204);
}
#exitDialogue:active{
    color: rgb(184, 184, 184);
}

#copyResultsBtn{
    font-weight: bold;
    font-size: 2rem;
    border-style: none;
    border-radius: 20px;
    background-color: rgb(82, 197, 82);
    color: rgb(255, 255, 255);
    width: fit-content;
}
#copyResultsBtn:hover{
    background-color: rgb(63, 146, 63);
}
#copyResultsBtn:active{
    background-color: rgb(63, 130, 63);
}

#copyResultsTwitchBtn{
    font-size: 1.2rem;
    margin-top: 15px;
    border-style: none;
    border-radius: 20px;
    background-color: rgb(79, 175, 79);
    color: rgb(255, 255, 255);
    width: fit-content;
}
#copyResultsTwitchBtn:hover{
    background-color: rgb(55, 129, 55);
}
#copyResultsTwitchBtn:active{
    background-color: rgb(55, 113, 55);
}

#confirmCopied{
    font-size: 1.1em;
    font-style: italic;
}


.categoryTooltip{
    font-weight: bold;
    font-size: 1.2rem;
    position: absolute;
    bottom: 170px;
    left: 120px;
    color: white;
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 50%;
    border-style: none;
}
[data-tooltip]::after{
    position: absolute;
    width: 200px;
    left: calc(50% - 100px);
    bottom: 125%;
    text-align: center;
    box-sizing: border-box;
    
    content: attr(data-tooltip);
    color: white;
    background: rgba(0, 0, 0, 0.85);
    padding: 8px;
    border-radius: 10px;
    font-size: 1rem;
    font-weight: bold;

    visibility: hidden;
    opacity: 0;
    transform: translateY(10px);
    transition: opacity 0.3s, transform 0.2s;
}
[data-tooltip]:hover::after{
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
}

